# tokyo_photo2geo

./: .gitattributes  .gitignore  Dockerfile  README.md  build.bash  pyproject.toml
notebook/: create_visualization.ipynb  description_wih_gpt_vision.ipynb  predict.ipynb
photo2geo/: __init__.py  data.py  model.py  transform.py
results/class7_resnet50_batch30_lr1e-05_commit6241653_202112070034/: model_epoch199.pth  params.json  result_val_epoch199.csv
scripts/: create_dataset.py  helper.py  predict.py  train.py  web.py
